<resources>

    <string name="app_name">InfoSession</string>

    <!-- Manifest Lables -->
    <string name="make_plan_activity">Make A Plan</string>

    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>

    <!-- Login / Register Strings -->
    <string name="email_hint">E-mail Address</string>
    <string name="pw_hint">Password</string>
    <string name="login_btn">Log in</string>
    <string name="fill_field">Please fill in all of the fields</string>
    <string name="wait">Please wait..</string>
    <string name="not_found">Email or Password not found.</string>
    <string name="to_register">Sign up</string>
    <string name="close_app">Please close the app and try again.</string>
    <string name="now_reg">You are now Registered!</string>
    <string name="email_error">Please enter a valid e-mail address.</string>
    <string name="pw_error">Password must be at least 6 characters long.</string>
    <string name="text_error">Please make sure that you have entered the e-mail in the correct format.</string>

    <!-- New User Activity strings -->
    <string name="welcome"> Before you get started, we want to ask you a few questions.</string>
    <string name="name_prompt">What is your name?</string>
    <string name="dob_prompt">How old are you?</string>
    <string name="gender_prompt">Please select your gender.</string>
    <string name="gender_female">Female</string>
    <string name="gender_male">Male</string>
    <string name="gender_other">Other</string>
    <string name="name_hint">5 &#8211; 20 characters long</string>
    <string name="dob_infant">0 &#8211; 2 years old</string>
    <string name="dob_adolescent">3 &#8211; 18 years old</string>
    <string name="dob_adult">19 or older</string>
    <string name="submit_form">Submit</string>
    <string name="next_form">next</string>
    <string name="active_prompt">What is your daily activity level?</string>
    <string name="active_sedentary">Sedentary</string>
    <string name="active_low">Low</string>
    <string name="active_high">High</string>
    <string name="age_prompt">What is your age?</string>
    <string name="weight_prompt">What is your weight?</string>
    <string name="weight_error">Please check your weight field and try again.</string>
    <string name="age_error">Please check your age field and try again.</string>
    <string name="submit_confirmation">Thank you! Now taking you back to the homepage..</string>

    <!-- NewUserActivity 2, for the spinners -->
    <string name="age_spinner_1">Tap for dropdown</string>
    <string name="age_spinner_2">10 &#8211; 11 years</string>
    <string name="age_spinner_3">12 &#8211; 13 years</string>
    <string name="age_spinner_4">14 &#8211; 16 years</string>
    <string name="age_spinner_5">17 &#8211; 18 years</string>
    <string name="age_spinner_6">19 &#8211; 30 years</string>
    <string name="age_spinner_7">31 &#8211; 50 years</string>
    <string name="age_spinner_8">51 &#8211; 70 years</string>
    <string name="age_spinner_9">71 years and up</string>
    <string name="weight_spinner_1">lbs</string>
    <string name="weight_spinner_2">kg</string>

    <!-- Settings plage -->
    <string name="choose_plan">primary plan</string>
    <string name="img_placeholder">placeholder for profile picture</string>
    <string name="name_placeholder">display_name</string>
    <string name="email_placeholder">email</string>
    <string name="age_placeholder">age range</string>
    <string name="active_placeholder">activity level</string>
    <string name="bye">Sign Out</string>
    <string name="signed_out">Logout successful.</string>
    <string name="to_newUser">Change information</string>
    <string name="change_plan">Change Plan:</string>
    <string name="plan_changed">Your plan is now changed!</string>

    <!-- FAQ strings -->
    <string name="q_barcode">Using the barcode scanner</string>
    <string name="q_plans">Creating a Plan</string>
    <string name="q_settings">Changing your settings</string>

    <!-- Choose Plan strings -->
    <string name="make_plan_submit">Create New Plan</string>
    <string name="defaultplan">Default Plan</string>
    <string name="placeholder"> </string>
    <string name="delete_error">Cannot delete default plan! </string>
    <string name="delete_success">Your plan has been deleted.</string>

    <!-- Make Plan strings -->
    <string name="plan_title">Plan Name</string>
    <string name="plan_title_placeholder">Plan Title</string>
    <string name="nutrients_header">Pick the nutrients you want to watch for using the "+" button
    and then edit your daily limit for those nutrients once they appear below.</string>
    <string name="blacklisted_ingredients">Blacklisted Ingredients</string>
    <string name="plan_submit">Submit</string>
    <string name="pick_nutrients">Pick which nutrients you want to track.</string>
    <string name="submit_nutrients">Submit</string>
    <string name="cancel_nutrients">Cancel</string>
    <string name="nutrient_limit_placeholder">0</string>
    <string name="nutrient_name_description">User-defined nutrient</string>
    <string name="grams_label">grams</string>
    <string name="delete_description">Delete</string>

    <!-- Titles -->
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="camera">Camera</string>
    <string name="plans">Plans</string>

    <string name="title_activity_results">Results</string>

    <!-- StatisticsFragment -->
    <string name="Green">Green</string>
    <string name="Red">Red</string>
    <string name="fat">Fat</string>
    <string name="goodFat">Good Fats</string>
    <string name="badFat">Bad Fats</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="sodium">Sodium</string>
    <string name="carbohydrate">Carbohydrate</string>
    <string name="fibre">Fibre</string>
    <string name="potassium">Potassium</string>
    <string name="protein">Protein</string>
    <string name="vitaminA">Vitamin A</string>
    <string name="vitaminC">Vitamin C</string>
    <string name="calcium">Calcium</string>
    <string name="iron">Iron</string>
    <string name="calories">Calories</string>
    <string name="snapCam">Camera</string>

    <!-- FAQ strings -->
    <string name="faq_barcode">Using the Barcode</string>
    <string name="faq_barcode_details">Making sure that you have a clear, close-up of the barcode, position your phone so that the barcode can be clearly seen. The camera will then automatically read the barcode and take you to the next page.</string>
    <string name="faq_plans">Using the Plans</string>
    <string name="faq_settings">Using the Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- STRING ARRAYS -->

    <!-- MakePlan arrays -->
    <string-array name="nutrient_list">
        <item>Calories</item>
        <item>Good Fats</item>
        <item>Bad Fats</item>
        <item>Cholesterol</item>
        <item>Sodium</item>
        <item>Carbohydrates</item>
        <item>Potassium</item>
        <item>Fibre</item>
        <item>Protein</item>
        <item>Vitamin A</item>
        <item>Vitamin C</item>
        <item>Calcium</item>
        <item>Iron</item>
    </string-array>

    <!--NewUser2 Array -->
    <string-array name="age_list">
        <item>Tap for dropdown</item>
        <item>10 &#8211; 11 years</item>
        <item>12 &#8211; 13 years</item>
        <item>14 &#8211; 16 years</item>
        <item>17 &#8211; 18 years</item>
        <item>19 &#8211; 30 years</item>
        <item>31 &#8211; 50 years</item>
        <item>51 &#8211; 70 years</item>
        <item>71 years and up</item>
    </string-array>

    <string-array name="weight_list">
        <item>lbs</item>
        <item>kg</item>
    </string-array>

    <!--User Settings Array -->
    <string-array name="plan_list">
        <item>Default plan</item>
        <item> </item>
        <item> </item>
        <item> </item>
        <item> </item>
        <item> </item>
    </string-array>

</resources>
